--- a/MyMusicWebAPI/appsettings.json
+++ b/MyMusicWebAPI/appsettings.json
@@ -8,5 +8,8 @@
         }
     },
     "AllowedHosts": "*",
-    "SQLServerConnection": "Server=127.0.0.1;Database=MyMusicTestDB1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionStrings":
+    {
+        "SQLServerConnection": "Server=localhost;Database=MyMusicTestDB1;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    },
 }
