--- a/MyMusicWebAPI/Properties/launchSettings.json
+++ b/MyMusicWebAPI/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "MyMusicWebAPI": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
