--- a/MyMusicWebAPI/appsettings.json
+++ b/MyMusicWebAPI/appsettings.json
@@ -12,4 +12,10 @@
     {
         "SQLServerConnection": "Server=localhost;Database=MyMusicTestDB1;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true;"
     },
+    "Email":
+    {
+        "Host": "smtp.qq.com",
+        "Secret": "aegukrwvmtjfbbdd",
+        "FromAddr": "micry365@foxmail.com"
+    }
 }
