新增接口，代码优化，数据库调整

--- a/MyMusicWebAPI/appsettings.json
+++ b/MyMusicWebAPI/appsettings.json
@@ -17,5 +17,12 @@
         "Host": "smtp.qq.com",
         "Secret": "aegukrwvmtjfbbdd",
         "FromAddr": "micry365@foxmail.com"
+    },
+    "Jwt":
+    {
+        "Issuer": "Micry",
+        "Audience": "MicryUser",
+        "Key": "501750D0-1DEF-4217-BE57-6E968FB426DB",
+        "Time": 604800
     }
 }
