基本功能完毕

--- a/MyMusicWebAPI/appsettings.json
+++ b/MyMusicWebAPI/appsettings.json
@@ -10,7 +10,8 @@
     "AllowedHosts": "*",
     "ConnectionStrings":
     {
-        "SQLServerConnection": "Server=localhost;Database=MyMusicTestDB1;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true;"
+        "SQLServerConnection": "Server=localhost;Database=MyMusicTestDB1;TrustServerCertificate=true;Trusted_Connection=true;MultipleActiveResultSets=true;"
+        // "Server=localhost;Database=MyDatabase;User ID=sa;Password=123456;MultipleActiveResultSets=true;"
     },
     "Email":
     {
