--- a/MyMusicWebAPI/Properties/launchSettings.json
+++ b/MyMusicWebAPI/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "MyMusicWebAPI": {
       "commandName": "Project",
+      "workingDirectory": "bin\\\\Debug\\\\net6.0",
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
